--- a/environment.yml
+++ b/environment.yml
@@ -5,16 +5,16 @@ dependencies:
   - python=3.10
   - pip
   - pip:
-      - pandas
-      - scipy
-      - numpy
-      - scikit-learn
-      - seaborn
-      - typing_extensions
-      - jupyter
-      - xgboost
-      - hyperopt
-      - mlflow
-      - GitPython
-      - requests
-      - docker
+      - pandas==2.0.3
+      - scipy==1.11.1
+      - numpy==1.25.1
+      - scikit-learn==1.3.0
+      - seaborn==0.12.2
+      - typing_extensions==4.7.1
+      - jupyter==1.0.0
+      - xgboost==1.7.6
+      - hyperopt==0.2.7
+      - mlflow==2.5.0
+      - GitPython==3.1.32
+      - requests==2.31.0
+      - docker==6.1.3
