--- a/refactoring-journey/step10-deployment/app/environment-prod.yml
+++ b/refactoring-journey/step10-deployment/app/environment-prod.yml
@@ -1,17 +1,70 @@
 name: pop-prod
 channels:
   - conda-forge
+  - defaults
 dependencies:
-  - python=3.10
-  - uvicorn=0.23.2
+  - annotated-types=0.5.0
+  - anyio=3.7.1
+  - brotli-python=1.0.9
+  - bzip2=1.0.8
+  - ca-certificates=2023.7.22
+  - certifi=2023.7.22
+  - charset-normalizer=3.2.0
+  - click=8.1.6
+  - exceptiongroup=1.1.2
   - fastapi=0.101.0
+  - h11=0.14.0
+  - idna=3.4
+  - joblib=1.3.2
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libffi=3.4.2
+  - libgfortran5=12.3.0
+  - liblapack=3.9.0
+  - libopenblas=0.3.23
+  - libsqlite=3.42.0
+  - libzlib=1.2.13
+  - llvm-openmp=16.0.6
+  - ncurses=6.4
+  - numpy=1.25.2
+  - openssl=3.1.2
+  - packaging=23.1
+  - pandas=2.0.3
+  - pip=23.2.1
+  - platformdirs=3.10.0
+  - pooch=1.7.0
   - pydantic=2.1.1
-  - pip
+  - pydantic-core=2.4.0
+  - pysocks=1.7.1
+  - python=3.10.12
+  - python-dateutil=2.8.2
+  - python-tzdata=2023.3
+  - python_abi=3.10
+  - pytz=2023.3
+  - readline=8.2
+  - requests=2.31.0
+  - scikit-learn=1.3.0
+  - scipy=1.11.1
+  - setuptools=68.0.0
+  - six=1.16.0
+  - sniffio=1.3.0
+  - starlette=0.27.0
+  - threadpoolctl=3.2.0
+  - tk=8.6.12
+  - typing-extensions=4.7.1
+  - typing_extensions=4.7.1
+  - tzdata=2023c
+  - urllib3=2.0.4
+  - uvicorn=0.23.2
+  - wheel=0.41.1
+  - xz=5.2.6
   - pip:
-      - pandas
-      - scipy
-      - numpy
-      - scikit-learn
-      - seaborn
-      - typing_extensions
-      - xgboost
+      - contourpy==1.1.0
+      - cycler==0.11.0
+      - fonttools==4.42.0
+      - kiwisolver==1.4.4
+      - matplotlib==3.7.2
+      - pillow==10.0.0
+      - pyparsing==3.0.9
+      - seaborn==0.12.2
+      - xgboost==1.7.6
