--- a/environment.yml
+++ b/environment.yml
@@ -14,10 +14,10 @@ dependencies:
   - jupyter=1.0.0
   - xgboost=1.7.6
   - hyperopt=0.2.7
-  - mlflow=2.5.0
   - GitPython=3.1.32
   - requests=2.31.0
   - docker-py=6.1.3
   - kaggle=1.5.16
   - pip:
       - sensai==1.0.0b2
+      - mlflow==2.5.0
